--- a/EtteplanMORE.ServiceManual.Web/EtteplanMORE.ServiceManual.Web.csproj
+++ b/EtteplanMORE.ServiceManual.Web/EtteplanMORE.ServiceManual.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.3" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
   <ItemGroup>
