--- a/EtteplanMORE.ServiceManual.ApplicationCore/EtteplanMORE.ServiceManual.ApplicationCore.csproj
+++ b/EtteplanMORE.ServiceManual.ApplicationCore/EtteplanMORE.ServiceManual.ApplicationCore.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="System.Data.SQLite.Core" Version="1.0.112" />
+  </ItemGroup>
+
 </Project>
