--- a/EtteplanMORE.ServiceManual.Web/EtteplanMORE.ServiceManual.Web.csproj
+++ b/EtteplanMORE.ServiceManual.Web/EtteplanMORE.ServiceManual.Web.csproj
@@ -12,6 +12,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="SMDB.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SMDB.db">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
