--- a/EtteplanMORE.ServiceManual.UnitTests/EtteplanMORE.ServiceManual.UnitTests.csproj
+++ b/EtteplanMORE.ServiceManual.UnitTests/EtteplanMORE.ServiceManual.UnitTests.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="SMDB.db" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="SMDB.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.console" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
